[package]
name = "hdfc-cc-parser-rs"
version = "1.0.0"
authors = ["Joe Paul <joeirimpan@gmail.com>"]
repository = "https://github.com/joeirimpan/hdfc-cc-parser-rs"
keywords = ["HDFC", "credit card", "bill"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
csv = "1.1.6"
pdf = { path = "./pdf/pdf", features = [ "euclid" ] }
regex = "1.7.1"
pdf_encoding = "0.4.0"
euclid = "0.22.6"
log = "*"
clap = "4.1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
